[package]
name = "memadvise"
version = "0.1.0"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]

[features]
no_std = ["page_size/no_std"]

[dependencies]
page_size = "^0.3.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "^0.2.31"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "^0.2.8"
kernel32-sys = "^0.2.2"