[package]
name = "memadvise"
version = "0.1.2"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]
description = "Advises operating system about memory usage"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/memadvise/"
homepage = "https://github.com/Elzair/memadvise"
repository = "https://github.com/Elzair/memadvise"
keywords = ["page", "memory", "ram", "madvise", "prefetch"]
categories = ["os"]

[badges]
travis-ci = { repository = "Elzair/memadvise" }
appveyor = { repository = "Elzair/memadvise" }

[features]
no_std = ["page_size/no_std", "spin"]

[dependencies]
page_size = "^0.4.0"
spin = { version = "^0.4.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "^0.2.30"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "^0.2.8"
kernel32-sys = "^0.2.2"